# boids-simulation

./: BoidCellMap.cpp  BoidCellMap.h  Boids.cpp  Boids.h  BoidsSimulation.sln  BoidsSimulation.vcxproj  BoidsSimulation.vcxproj.filters  CMakeLists.txt  GUIController.cpp  GUIController.h  Helpers.cpp  Helpers.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Simulation.cpp  Simulation.h  SpatialGrid.cpp  SpatialGrid.h  boid.vert  glad.c  imgui.ini  main.cpp
discard/: Renderer.cpp  Renderer.h  Shader.h  Shader3.cpp  Shader3.h
include/: boids.h  mode.h  simulationState.h
include/cpu/: simulationCPU.h  spatialGridCPU.h
include/gpu/: float4x4.h  simulationGPU.cuh  spatialGridGPU.cuh
include/rendering/: camera.h  imguiController.h  inputManager.h  shader.h  timer.h  window.h
resources/: boid.frag  boid.vert  edge.vert
shaders/: boid.frag
src/: boids.cpp  main.cu
src/cpu/: simulationCPU.cpp  spatialGridCPU.cpp
src/gpu/: simulationGPU.cu  spatialGridGPU.cu
src/rendering/: camera.cpp  imguiController.cpp  inputManager.cpp  shader.cpp  timer.cpp  window.cpp
